# jit

./: .gitignore  .mailmap  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md  biome.jsonc  commitlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.root.mjs
.github/: dependabot.yml  labels.json  pull_request_template.md  repository.json
.github/ISSUE_TEMPLATE/: 01-bug.yml  02-feature.yml  03-performance.yml  04-documentation.yml  05-question.yml  config.yml
.github/workflows/: ci.yml  release.yml  repository-settings.yml  sync-labels.yml
.husky/: pre-commit  pre-push
apps/site/: .env.example  next.config.ts  package.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
bench/: report.ts
bench/binary/: compositions.ts  index.ts  strings.ts
bench/clone/: array.ts  collections.ts  index.ts  objects.ts
bench/coldstart/: cold-aot.mjs  cold-jit.mjs  index.ts
bench/diff/: array.ts  collections.ts  index.ts  objects.ts
bench/equal/: array.ts  deep.ts  generated.ts  index.ts  large.ts  medium.ts  shared.ts  small.ts  worst-case.ts
bench/flows/: index.ts
bench/lazy/: index.ts
docs/: architecture.md
scripts/: check-release.ts  check-semver.ts  clean-artifacts.mjs  clean-build-artifacts.ts  package-native-cli.mjs  smoke-package.ts  sync-github-labels.mjs  sync-repository-settings.mjs
tests/: artifact-wasm.test.ts  baseline.test.ts  lab.test.ts  playground.test.ts  setup.ts  tsconfig.json  vitest.config.ts
(+204 files in other folders)
